GRAILS-391 - Fixed tests to use "new Integer(0)" instead of "Integer.valueOf(0)" to be compatible with JDK 1.4.
git-svn-id: https://svn.codehaus.org/grails/trunk@2181 1cfb16fd-6d17-0410-8ff1-b7e8e1e2867d